--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-uglify": "~0.2.7",
-    "grunt-livescript": "~0.5.1"
+    "grunt-livescript": "~0.5.1",
+    "grunt-contrib-copy": "~0.4.1"
   }
 }
