--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "karma-phantomjs-launcher": "~0.1.1",
     "karma": "~0.10.8",
     "grunt-karma": "~0.6.2",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-release": "~0.6.0"
   }
 }
