--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-ujs",
-  "version": "0.3.0",
+  "version": "0.3.2",
   "description": "Unobtrusive scripting adapter for angularjs",
   "summary": "Ruby on Rails unobtrusive scripting adapter for angularjs ( Without jQuery dependency )",
   "main": "angular-ujs.js",
@@ -48,6 +48,6 @@
     "karma": "~0.10.8",
     "grunt-karma": "~0.6.2",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-release": "~0.6.0"
+    "grunt-bump": "0.0.13"
   }
 }
