--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-bump": "0.0.13",
     "grunt-protractor-runner": "~0.2.0",
-    "protractor": "~0.15.0"
+    "protractor": "~0.15.0",
+    "grunt-shell": "~0.6.1"
   }
 }
