--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "grunt": "~0.4.2",
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-livescript": "~0.5.1",
-    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-copy": "~0.5.0",
     "karma-script-launcher": "~0.1.0",
     "karma-chrome-launcher": "~0.1.2",
     "karma-firefox-launcher": "~0.1.3",
@@ -51,6 +51,7 @@
     "grunt-bump": "0.0.13",
     "grunt-protractor-runner": "~0.2.0",
     "protractor": "~0.15.0",
-    "grunt-shell": "~0.6.1"
+    "grunt-shell": "~0.6.1",
+    "grunt-conventional-changelog": "~1.0.0"
   }
 }
