--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "summary": "Ruby on Rails unobtrusive scripting adapter for angularjs ( Without jQuery dependency )",
   "main": "angular-ujs.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test --require LiveScript",
+    "build": "gulp build --require LiveScript",
+    "watch": "gulp watch --require LiveScript",
+    "release": "gulp release --require LiveScript"
   },
   "repository": {
     "type": "git",
@@ -32,26 +35,21 @@
   },
   "homepage": "https://github.com/tomchentw/angular-ujs",
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-uglify": "~0.2.7",
-    "grunt-livescript": "~0.5.1",
-    "grunt-contrib-copy": "~0.5.0",
     "karma-script-launcher": "~0.1.0",
+    "karma-phantomjs-launcher": "~0.1.1",
     "karma-chrome-launcher": "~0.1.2",
     "karma-firefox-launcher": "~0.1.3",
-    "karma-html2js-preprocessor": "~0.1.0",
     "karma-jasmine": "~0.1.5",
-    "karma-coffee-preprocessor": "~0.1.2",
-    "requirejs": "~2.1.9",
-    "karma-requirejs": "~0.2.1",
-    "karma-phantomjs-launcher": "~0.1.1",
     "karma": "~0.10.8",
-    "grunt-karma": "~0.6.2",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-bump": "0.0.13",
-    "grunt-protractor-runner": "~0.2.0",
-    "protractor": "~0.15.0",
-    "grunt-shell": "~0.6.1",
-    "grunt-conventional-changelog": "~1.0.0"
+    "LiveScript": "~1.2.0",
+    "event-stream": "~3.1.0",
+    "gulp": "~3.3.1",
+    "gulp-livescript": "0.0.12",
+    "gulp-header": "~0.4.0",
+    "gulp-uglify": "~0.1.0",
+    "gulp-rename": "~0.2.1",
+    "gulp-bump": "~0.1.0",
+    "gulp-exec": "~1.0.3",
+    "gulp-conventional-changelog": "0.0.8"
   }
 }
