--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ rvm:
 before_install:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
-- cd misc/test-scenario
+- cd test/scenario-rails
 - export BUNDLE_GEMFILE=$PWD/Gemfile
 - bundle install
 - RAILS_ENV=test bundle exec rake db:drop db:migrate
@@ -12,7 +12,7 @@ before_install:
 - cd ../..
 - export BUNDLE_GEMFILE=$PWD/Gemfile
 before_script:
-- npm install --quiet -g gulp karma protractor
+- npm install --quiet -g bower gulp karma protractor
 - npm install --quiet
 script: npm test
 after_script:
