--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "karma-firefox-launcher": "~0.1.3",
     "karma-jasmine": "~0.1.5",
     "karma-phantomjs-launcher": "~0.1.1",
-    "karma": "~0.10.9"
+    "karma-coverage": "~0.1.4",
+    "karma": "~0.10.9",
+    "coveralls": "~2.6.1"
   }
 }
