chore(angular-ujs): apply gulp-markdown-code

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "karma-phantomjs-launcher": "~0.1.2",
     "karma-coverage": "~0.1.5",
     "karma": "~0.10.9",
-    "coveralls": "~2.7.1"
+    "coveralls": "~2.7.1",
+    "gulp-markdown-code": "0.0.1"
   }
 }
