--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/tomchentw/angular-ujs.git"
+    "url": "https://github.com/tomchentw/angular-ujs"
   },
   "keywords": [
     "Ruby on Rails",
@@ -25,11 +25,11 @@
   "author": {
     "name": "tomchentw",
     "email": "developer@tomchentw.com",
-    "url": "https://github.com/tomchentw/"
+    "url": "https://github.com/tomchentw"
   },
   "license": {
     "type": "MIT",
-    "url": "http://tomchentw.mit-license.org/"
+    "url": "http://tomchentw.mit-license.org"
   },
   "bugs": {
     "url": "https://github.com/tomchentw/angular-ujs/issues"
