--- a/package.json
+++ b/package.json
@@ -39,13 +39,14 @@
     "LiveScript": "~1.2.0",
     "event-stream": "~3.1.0",
     "gulp": "~3.5.2",
-    "gulp-livescript": "0.1.1",
+    "gulp-livescript": "~0.1.2",
     "gulp-header": "~1.0.2",
     "gulp-uglify": "~0.2.1",
     "gulp-rename": "~1.0.0",
     "gulp-bump": "~0.1.4",
     "gulp-exec": "~1.0.4",
-    "gulp-conventional-changelog": "0.1.1",
+    "gulp-conventional-changelog": "~0.1.2",
+    "karma-live-preprocessor": "~0.2.2",
     "karma-script-launcher": "~0.1.0",
     "karma-chrome-launcher": "~0.1.2",
     "karma-firefox-launcher": "~0.1.3",
