chore(Gemfile): update scenario-rails

--- a/test/scenario-rails/Gemfile
+++ b/test/scenario-rails/Gemfile
@@ -1,7 +1,7 @@
 source 'https://rubygems.org'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '4.0.2'
+gem 'rails', '~> 4.0.2'
 
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3'
@@ -10,10 +10,9 @@ gem 'sqlite3'
 gem 'sass-rails', '~> 4.0.0'
 
 # Use Uglifier as compressor for JavaScript assets
-gem 'uglifier', '>= 1.3.0'
+gem 'uglifier'
 
 # Use LiveScript for .js.ls assets and views
-gem 'livescript-source', github: 'Roonin-mx/livescript-source'
 gem 'livescript-rails'
 
 # See https://github.com/sstephenson/execjs#readme for more supported runtimes
@@ -32,7 +31,7 @@ gem 'angular-ujs', path: '../../'
 gem 'devise'
 
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
-gem 'jbuilder', '~> 1.2'
+gem 'jbuilder'
 
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
