chore: bower, gulpfile
* bower: replace angular-ui-bootstrap-bower with angular-bootstrap
* gulpfile: path.join with array

--- a/bower.json
+++ b/bower.json
@@ -41,7 +41,7 @@
     "jquery": "~2.1.0",
     "angular-sanitize": "~1.2.13",
     "angular-mocks": "~1.2.13",
-    "angular-ui-bootstrap-bower": "~0.10.0",
+    "angular-bootstrap": "~0.10.0",
     "bootstrap-sass": "git://github.com/twbs/bootstrap-sass.git"
   }
 }
