chore(Makefile): rebuild by tomchentw/tc-ng-boilerplate@9241ab65bb

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,13 @@
-language: ruby
-rvm:
-- 2.0.0
+language: node_js
+node_js:
+- '0.10'
 before_install:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
-- cd test/scenario-rails
-- export BUNDLE_GEMFILE=$PWD/Gemfile
-- bundle install
-- RAILS_ENV=test bundle exec rake db:drop db:migrate
-- rails s -d -e test -p 2999
-- cd ../..
-- export BUNDLE_GEMFILE=$PWD/Gemfile
-before_script:
-- npm install --quiet -g bower gulp karma protractor
-- npm install --quiet
-- bower install --quiet
-script: npm test
-after_script:
-- kill $(lsof -i :2999 -t)
-addons:
+ddons:
   sauce_connect: true
 env:
   global:
-  - rvmsudo_secure_path: 1
   - secure: kou5wVnENwnwQFaiepw86q5x3wur2Dxi52+CsipWfzTFiq7FzYFm/xExLCL8GDHVpfza/OtCX3bL1JSkFmFLJ9hRGjGBCh81OAsTsns2LxgyZ1832hvck8P4ikcpjkhaQm5nQFNKlPqafaKT0Hti4/UZhA/3BeQAeR2lOmf9meI=
   - secure: BK7W2x/qbqeFXodw+T5twbmq5V3RJbcF1ACn/T8jm0ElGFkkWy+ugdekMhiWXl+CB857l9kfOiG/1JDF/0vJMxlAObhJjgspdZIQACRqLMhhKmIhKUHLBxOI974QDjxifU8YPZe9Lla0IErWs8yLBt9E1q3c8Nq0hrf9Hp85A24=
   - secure: C7cMMso7cStBd8CN+Dy4+RWHW7Xwf7jVLUDzINqOJf7ssp3GrrLHsnFALm0hTrkpIX6Z29+j7YR5tVlCKCVEgjGAoeCaiQ0kIjYGp1viD9JBgGwoNbXWhBUuLWm4IyQ52b+3W3U2Xeu6Eocsu+Ua6tkLTjpLIwPSI8J/MOpYiPw=
