--- a/bower.json
+++ b/bower.json
@@ -30,6 +30,7 @@
     "vendor",
     "Gemfile",
     "gulpfile.ls",
+    "Makefile",
     "package.json",
     "Rakefile",
     "angular-ujs.gemspec"
