--- a/bower.json
+++ b/bower.json
@@ -21,15 +21,18 @@
     "**/.*",
     "app",
     "bower_components",
+    "config",
     "lib",
     "node_modules",
     "pkg",
     "public",
+    "server",
     "test",
     "tmp",
     "vendor",
     "Gemfile",
     "gulpfile.ls",
+    "index.ls",
     "Makefile",
     "package.json",
     "Rakefile",
@@ -43,6 +46,7 @@
     "angular-sanitize": "~1.2.13",
     "angular-mocks": "~1.2.13",
     "angular-bootstrap": "~0.10.0",
-    "bootstrap-sass": "git://github.com/twbs/bootstrap-sass.git"
+    "google-code-prettify": "~1.0.1",
+    "twbs-bootstrap-sass": "~3.1.1"
   }
 }
