--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,17 @@ node_js:
 before_install:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
+- cd misc/test-scenario
+- export BUNDLE_GEMFILE=$PWD/Gemfile
+- bundle install
+- RAILS_ENV=test bundle exec rake db:migrate
+- rvmsudo rails s -d -e test -p 80
+- sleep 3
+- cd ../..
+- export BUNDLE_GEMFILE=$PWD/Gemfile
 script: make test
+after_script:
+- sudo kill `cat misc/test-scenario/tmp/pids/server.pid`
 addons:
   sauce_connect: true
 env:
