chore(subtree): merge tomchentw/tc-ng-boilerplate@e4f805d
Conflicts:
  .gitignore
  .travis.yml
  CHANGELOG.md
  Gemfile
  Makefile
  README.md
  bower.json
  client/gulpfile.ls
  client/index.ls
  client/javascripts/application.ls
  client/stylesheets/_bootstrap.scss
  client/stylesheets/application.scss
  client/views/index.jade
  config/port.ls
  index.ls
  package.json
  server/index.ls
  test/karma.js
  test/protractor.js

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,11 @@ before_install:
 - export BUNDLE_GEMFILE=$PWD/Gemfile
 - bundle install
 - RAILS_ENV=test bundle exec rake db:migrate
-- rails s -d -e test -p 2999
+- rails s -d -e test -p 5000
 - sleep 3
 - cd ../..
 - export BUNDLE_GEMFILE=$PWD/Gemfile
+install: make install
 script: make test
 after_script:
 - sudo kill `cat misc/test-scenario/tmp/pids/server.pid`
