--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "**/.*",
     "app",
     "bower_components",
+    "client",
     "config",
     "lib",
     "node_modules",
@@ -46,7 +47,6 @@
     "angular-sanitize": "~1.2.13",
     "angular-mocks": "~1.2.13",
     "angular-bootstrap": "~0.10.0",
-    "google-code-prettify": "~1.0.1",
     "twbs-bootstrap-sass": "~3.1.1"
   }
 }
