--- a/package.json
+++ b/package.json
@@ -29,11 +29,19 @@
     "url": "https://github.com/tomchentw/angular-ujs/issues"
   },
   "homepage": "https://github.com/tomchentw/angular-ujs",
+  "engines": {
+    "node": "0.10.x"
+  },
+  "scripts": {
+    "start": "lsc index"
+  },
   "devDependencies": {
     "LiveScript": "^1.2.0",
-    "bower": "^1.2.8",
-    "tiny-lr": "^0.0.5",
     "connect": "^2.13.0",
+    "q": "^1.0.0",
+    "bower": "^1.2.8",
+    "highlight.js": "^8.0.0",
+    "tiny-lr": "^0.0.5",
     "connect-livereload": "^0.3.2",
     "protractor": "^0.20.1",
     "coveralls": "^2.8.0",
@@ -47,9 +55,11 @@
     "gulp-conventional-changelog": "^0.1.2",
     "gulp-jade": "^0.4.1",
     "gulp-ruby-sass": "^0.4.0",
+    "gulp-minify-css": "^0.3.0",
     "gulp-angular-templatecache": "^1.1.0",
     "gulp-concat": "^2.1.7",
     "gulp-livereload": "^1.1.1",
+    "gulp-rev": "^0.3.2",
     "karma": "^0.10.9",
     "karma-live-preprocessor": "^0.2.2",
     "karma-script-launcher": "^0.1.0",
