--- a/package.json
+++ b/package.json
@@ -33,39 +33,39 @@
     "node": "0.10.x"
   },
   "scripts": {
-    "start": "lsc index"
+    "start": "make server"
+  },
+  "dependencies": {
+    "LiveScript": "^1.2.0",
+    "bower": "^1.2.8",
+    "q": "^1.0.0",
+    "connect": "^2.13.0",
+    "highlight.js": "^8.0.0",
+    "gulp": "^3.5.2",
+    "gulp-livescript": "^0.2.0",
+    "gulp-uglify": "^0.2.1",
+    "gulp-angular-templatecache": "^1.1.0",
+    "gulp-jade": "^0.5.0",
+    "gulp-sass": "^0.7.1",
+    "gulp-minify-css": "^0.3.0",
+    "gulp-concat": "^2.1.7",
+    "gulp-rev": "^0.3.2",
+    "gulp-header": "^1.0.2"
   },
   "devDependencies": {
-    "LiveScript": "^1.2.0",
-    "connect": "^2.13.0",
-    "q": "^1.0.0",
-    "bower": "^1.2.8",
-    "highlight.js": "^8.0.0",
-    "tiny-lr": "^0.0.5",
-    "connect-livereload": "^0.3.2",
-    "protractor": "^0.20.1",
-    "coveralls": "^2.8.0",
-    "gulp": "^3.5.2",
-    "gulp-util": "^2.2.14",
-    "gulp-livescript": "^0.2.0",
-    "gulp-header": "^1.0.2",
-    "gulp-uglify": "^0.2.1",
-    "gulp-rename": "^1.1.0",
+    "tiny-lr": "0.0.5",
     "gulp-bump": "^0.1.4",
     "gulp-conventional-changelog": "^0.1.2",
-    "gulp-jade": "^0.4.1",
-    "gulp-ruby-sass": "^0.4.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-angular-templatecache": "^1.1.0",
-    "gulp-concat": "^2.1.7",
     "gulp-livereload": "^1.1.1",
-    "gulp-rev": "^0.3.2",
-    "karma": "^0.10.9",
+    "gulp-nodemon": "^1.0.2",
+    "coveralls": "^2.8.0",
+    "protractor": "^0.21.0",
+    "karma": "^0.12.9",
     "karma-live-preprocessor": "^0.2.2",
     "karma-script-launcher": "^0.1.0",
     "karma-chrome-launcher": "^0.1.2",
     "karma-firefox-launcher": "^0.1.3",
-    "karma-jasmine": "^0.1.5",
+    "karma-jasmine": "^0.1.x",
     "karma-phantomjs-launcher": "^0.1.2",
     "karma-coverage": "^0.2.0"
   }
