--- a/bower.json
+++ b/bower.json
@@ -43,9 +43,9 @@
   },
   "devDependencies": {
     "angular-mocks": "~1.2.13",
-    "angular-sanitize": "~1.2.13",
     "angular-bootstrap": "~0.10.0",
     "angular-ga": "~0.1.0",
+    "angular-loading-bar": "~0.4.0",
     "jquery": "~2.1.0",
     "twbs-bootstrap-sass": "~3.1.1"
   }
