--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "tiny-lr": "0.0.5",
     "gulp-bump": "^0.1.4",
+    "gulp-rename": "^1.2.0",
     "gulp-conventional-changelog": "^0.1.2",
     "gulp-livereload": "^1.1.1",
     "gulp-nodemon": "^1.0.2",
