--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "keywords": [
     "Ruby on Rails",
-    "RoR",
+    "Rails",
     "AngularJS",
     "jQuery",
-    "Unobtrusive scripting",
-    "directive"
+    "jquery_ujs",
+    "unobtrusive scripting",
+    "directive",
+    "data-method",
+    "data-remote",
+    "data-confirm"
   ],
   "author": {
     "name": "tomchentw",
@@ -41,8 +45,10 @@
     "q": "^1.0.0",
     "connect": "^2.13.0",
     "highlight.js": "^8.0.0",
+    "jshint-stylish": "^0.1.5",
     "gulp": "^3.5.2",
     "gulp-livescript": "^0.2.0",
+    "gulp-jshint": "^1.5.3",
     "gulp-uglify": "^0.2.1",
     "gulp-angular-templatecache": "^1.1.0",
     "gulp-jade": "^0.5.0",
